@@ -3947,7 +3947,7 @@ const template i386_optab[] =
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovsxbw", 2, 0x660f3820, None, CpuSSE4_1,
-    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf,
+    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf|NoRex64,
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovsxbd", 2, 0x660f3821, None, CpuSSE4_1,
@@ -3959,7 +3959,7 @@ const template i386_optab[] =
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovsxwd", 2, 0x660f3823, None, CpuSSE4_1,
-    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf,
+    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf|NoRex64,
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovsxwq", 2, 0x660f3824, None, CpuSSE4_1,
@@ -3967,11 +3967,11 @@ const template i386_optab[] =
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovsxdq", 2, 0x660f3825, None, CpuSSE4_1,
-    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf,
+    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf|NoRex64,
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovzxbw", 2, 0x660f3830, None, CpuSSE4_1,
-    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf,
+    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf|NoRex64,
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovzxbd", 2, 0x660f3831, None, CpuSSE4_1,
@@ -3983,7 +3983,7 @@ const template i386_optab[] =
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovzxwd", 2, 0x660f3833, None, CpuSSE4_1,
-    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf,
+    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf|NoRex64,
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovzxwq", 2, 0x660f3834, None, CpuSSE4_1,
@@ -3991,7 +3991,7 @@ const template i386_optab[] =
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmovzxdq", 2, 0x660f3835, None, CpuSSE4_1,
-    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf,
+    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf|NoRex64,
     { BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "pmuldq", 2, 0x660f3828, None, CpuSSE4_1,
@@ -4017,7 +4017,7 @@ const template i386_optab[] =
       BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
   { "roundsd", 3, 0x660f3a0b, None, CpuSSE4_1,
-    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf,
+    Modrm|IgnoreSize|No_bSuf|No_wSuf|No_lSuf|No_sSuf|No_qSuf|No_xSuf|NoRex64,
     { Imm8,
       BaseIndex|Disp8|Disp16|Disp32|Disp32S|RegXMM,
       RegXMM } },
